...
    <string name="password_placeholder">Input Password</string>
    <plurals name="password_min_length">
        <item formatted="true" quantity="one">Password must be at least than %1$d character</item>
        <item formatted="true" quantity="other">Password must be at least than %1$d characters</item>
    </plurals>
    <string name="input_invalid">Please fill all the field.</string>
    <string name="email_invalid">Email address is not valid.</string>
    <string name="login">Sign In</string>
    <string name="logout">Sign Out</string>
    <string name="email">Email Address</string>
    <string name="email_placeholder">Input Email Address</string>
    <string name="register">Create New Account</string>
    <string name="name">Name</string>
...
