<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="@dimen/dim_0"
        android:layout_height="0dp"
        android:padding="@dimen/dim_16"
        app:constraint_referenced_ids="iv_logo,title_register,lay_name,lay_email,lay_password,register_button,login_button"
        app:flow_horizontalAlign="start"
        app:flow_horizontalBias="0"
        app:flow_maxElementsWrap="1"
        app:flow_verticalBias="0.5"
        app:flow_verticalGap="@dimen/dim_16"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:maxHeight="200dp"
        android:minHeight="150dp"
        app:srcCompat="@drawable/ic_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_register"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:hint="@string/name"
        app:endIconMode="clear_text"
        app:placeholderText="@string/name_placeholder"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:placeholderText="@string/email_placeholder"
        app:startIconDrawable="@drawable/ic_email">

        <com.exam.storyapp.common.view.EmailInputEditTextEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:placeholderText="@string/password_placeholder"
        app:startIconDrawable="@drawable/ic_password">

        <com.exam.storyapp.common.view.PasswordInputEditTextEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.exam.storyapp.common.view.LoadingButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dim_8"
        android:alpha="0"
        android:contentDescription="@string/register"
        android:enabled="false"
        android:text="@string/register" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:contentDescription="@string/login"
        android:text="@string/login" />

</androidx.constraintlayout.widget.ConstraintLayout>
